fixed spacing issue

--- a/styles.scss
+++ b/styles.scss
@@ -73,7 +73,7 @@ text-decoration: underline;
   padding: 2em 4em;
     padding-right: 120px;
   margin: 0 auto;
-
+width: 100%;
 
        img {
         width: 100%;
